# pegium-language-template

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
cmake/: pegium.cmake
example/: sample.mydsl
scripts/: new-language.cmake
src/mydsl/: ast.hpp  cli_main.cpp  lsp_main.cpp
src/mydsl/core/: Module.cpp  Module.hpp  Services.hpp
src/mydsl/lsp/: Module.cpp  Module.hpp  Services.hpp
src/mydsl/parser/: Parser.hpp
tests/: ParseSmoke.cpp
